Fix headings overlapping

--- a/style.less
+++ b/style.less
@@ -14,6 +14,7 @@ html {
 body {
   font-size: 2*@cell;
   font-weight: 300;
+  z-index: -2;
 }
 
 h1, h2, h3 {
@@ -24,6 +25,10 @@ p {
   &, &:last-child {
     margin-bottom: 2*@cell;
   }
+}
+
+.links.list-inline {
+  margin-left: 0;
 }
 
 .carousel-control {
@@ -81,6 +86,12 @@ p {
 
 .main {
   padding: @block/2 0 @block/4 0;
+  h1, h2, h3 {
+    margin-top: -70px;
+    padding-top: 80px;
+    position: relative;
+    z-index: -1;
+  }
 }
 
 .main-col {
